--- a/SimpleDatabase/SimpleDatabase/SimpleDatabase.vcxproj
+++ b/SimpleDatabase/SimpleDatabase/SimpleDatabase.vcxproj
@@ -74,6 +74,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
